--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
       - name: Install Packages
-        run: sudo apt install nasm build-essential fatattr bison flex libgmp3-dev libmpfr3-dev libmpc-dev texinfo libisl-dev
+        run: sudo apt install nasm build-essential fatattr bison flex libgmp3-dev libmpfr-dev libmpc-dev texinfo libisl-dev
       - name: Build CC
         run: make cc -j6
       - name: Update Path
