--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,6 @@ jobs:
       - name: Build CC
         run: make cc -j6
       - name: Update Path
-        run: export PATH="$PWD/cc/cross/kernel-prefix/bin:$PATH"
+        run: echo "$GITHUB_WORKSPACE/cc/cross/kernel-prefix/bin" >> $GITHUB_PATH
       - name: Build OS
         run: make os -j6
